AAP-20549 - Implementing gateway UI changes into the Operations guide

--- a/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
@@ -13,10 +13,12 @@ You must have a Red Hat Subscription Manifest file exported from the Red Hat Cus
 . Complete steps to generate and download the manifest file
 . Log in to {PlatformName}.
 //[ddacosta] There is no license setting in the test environment for 2.4? Need to verify this selection. In 2.5, I think it will be Settings[Subscription]...
-. If you are not immediately prompted for a manifest file, go to menu:Settings[License].
-. Make sure the *Username* and *Password* fields are empty.
+. If you are not immediately prompted for a manifest file, go to {MenuSetSubscription}.
+. Select *Subscription manifest*.
 . Click btn:[Browse] and select the manifest file.
-. Click btn:[Next].
+. The Automation Analytics option is checked by default. These selections help Red Hat improve the product by delivering you a much better user experience. You can opt out by deselecting the options.
+. Review the End User License Agreement and select *I agree to the End User License Agreement*.
+. Click btn:[Finish].
 
 [NOTE]
 ====
