--- a/downstream/aap-common/external-site-disclaimer.adoc
+++ b/downstream/aap-common/external-site-disclaimer.adoc
@@ -12,9 +12,9 @@
 // The following example adds a symlink to snippets from a hub title
 // $ cd /titles/hub/getting-started
 // $ ln -s ../../../snippets ./snippets
-// 
+//
 // Including the file in a document
 // Add the following in the file where you want the text to be included:
 // include::snippets/external-site-disclaimer.adoc[]
-
-*Disclaimer*: Links contained in this note to external websites are provided for convenience only. Red Hat has not reviewed the links and is not responsible for the content or its availability. The inclusion of any link to an external website does not imply endorsement by Red Hat of the website or their entities, products or services. You agree that Red Hat is not responsible or liable for any loss or expenses that may result due to your use of (or reliance on) the external site or content.
+//[ddacosta] generalized this to be usable in broader applications.
+*Disclaimer*: Links contained in this information to external website(s) are provided for convenience only. Red Hat has not reviewed the links and is not responsible for the content or its availability. The inclusion of any link to an external website does not imply endorsement by Red Hat of the website or their entities, products or services. You agree that Red Hat is not responsible or liable for any loss or expenses that may result due to your use of (or reliance on) the external site or content.
