--- a/downstream/assemblies/platform/assembly-platform-whats-next.adoc
+++ b/downstream/assemblies/platform/assembly-platform-whats-next.adoc
@@ -9,7 +9,7 @@ Whether you are a new {PlatformNameShort} user looking to start automating, or a
 
 //isolated node migration
 //playbooks to download
-
-include::assembly-migrate-platform.adoc[leveloffset=+1]
+//[ddacosta]Migration not part of 2.5EA so removing this section until a migration path is made available. The content will need to be reworked for changes to migration/upgrade.
+// include::assembly-migrate-platform.adoc[leveloffset=+1]
 include::platform/proc-update-ee-image-locations.adoc[leveloffset=+1]
 include::platform/con-why-automation-mesh.adoc[leveloffset=+1]
