--- a/downstream/modules/platform/con-known-proxies.adoc
+++ b/downstream/modules/platform/con-known-proxies.adoc
@@ -10,8 +10,16 @@ When {ControllerName} is configured with `REMOTE_HOST_HEADERS = ['HTTP_X_FORWARD
 If {ControllerName} is reachable without use of the proxy/load balancer, or if the proxy does not validate the header, the value of `X-Forwarded-For` can be falsified to fake the originating IP addresses.
 Using `HTTP_X_FORWARDED_FOR` in the `REMOTE_HOST_HEADERS` setting poses a vulnerability.
 
-To avoid this, you can configure a list of known proxies that are allowed using the *PROXY_IP_ALLOWED_LIST* field in the settings menu on your {ControllerName}.
+To avoid this, you can configure a list of known proxies that are allowed.
+
+.Procedure
+. From the navigation panel, select {MenuSetSystem}.
+. Enter a list of proxy IP addresses from which the service should trust custom remote header values in the *Proxy IP Allowed List* field.
++
+[NOTE]
+====
 Load balancers and hosts that are not on the known proxies list will result in a rejected request.
+====
 
 //.Example vulnerabilities:
 //
