--- a/downstream/modules/platform/proc-aap-activate-with-credentials.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-credentials.adoc
@@ -6,15 +6,16 @@
 When {PlatformNameShort} launches for the first time, the {PlatformNameShort} Subscription screen automatically displays. You can use your Red Hat credentials to retrieve and import your subscription directly into {PlatformNameShort}.
 
 .Procedures
+. Select *Username / password*.
 . Enter your Red Hat username and password.
-. Click btn:[Get Subscriptions].
+. Select your subscription from the *Subscription* list.
 +
 [NOTE]
 ====
 You can also use your Satellite username and password if your cluster nodes are registered to Satellite through Subscription Manager.
 ====
 +
+. The Automation Analytics option is checked by default. These selections help Red Hat improve the product by delivering you a much better user experience. You can opt out by deselecting the options.
 . Review the End User License Agreement and select *I agree to the End User License Agreement*.
-. The Tracking and Analytics options are checked by default. These selections help Red Hat improve the product by delivering you a much better user experience. You can opt out by deselecting the options.
-. Click btn:[Submit].
-. Once your subscription has been accepted, the license screen displays and navigates you to the Dashboard of the {PlatformNameShort} interface. You can return to the license screen by clicking the btn:[Settings] icon *⚙* and selecting the *License* tab from the Settings screen.
+. Click btn:[Finish].
+. After your subscription has been accepted, the license screen displays and navigates you to the Dashboard of the {PlatformNameShort} interface. You can return to the license screen by selecting {MenuSetSubscription} from the navigation panel and clicking btn:[Edit subscription]..
