--- a/downstream/modules/platform/proc-configure-known-proxies.adoc
+++ b/downstream/modules/platform/proc-configure-known-proxies.adoc
@@ -5,26 +5,28 @@
 
 [role="_abstract"]
 
-To configure a list of known proxies for your {ControllerName}, add the proxy IP addresses to the *PROXY_IP_ALLOWED_LIST* field in the settings page for your {ControllerName}.
+To configure a list of known proxies for your {ControllerName}, add the proxy IP addresses to the *Proxy IP Allowed List* field in the System Settings page.
 
 .Procedure
-//[ddacosta] Need to verify that in 2.5 this is Settings[System]...
-. On your {ControllerName}, navigate to {MenuAEAdminSettings} and select *Miscellaneous System settings* from the list of *System* options.
-. In the *PROXY_IP_ALLOWED_LIST* field, enter IP addresses that are allowed to connect to your {ControllerName}, following the syntax in the example below:
+//[ddacosta] The Settings > System configurations are for controller only, so don't change ControllerName to PlatformName.
+. From the navigation panel, select {MenuSetSystem}.
+. In the *Proxy IP Allowed List* field, enter IP addresses that are allowed to connect to your {ControllerName}, following the syntax in the example below:
 +
-.Example *PROXY_IP_ALLOWED_LIST* entry
+.Example *Proxy IP Allowed List* entry
 ----
 [
   "example1.proxy.com:8080",
   "example2.proxy.com:8080"
 ]
 ----
-
++
 [IMPORTANT]
 ====
-* `PROXY_IP_ALLOWED_LIST` requires proxies in the list are properly sanitizing header input and correctly setting an ``X-Forwarded-For`` value equal to the real source IP of the client. {ControllerNameStart} can rely on the IP addresses and hostnames in `PROXY_IP_ALLOWED_LIST` to provide non-spoofed values for the `X-Forwarded-For` field.
-* Do not configure `HTTP_X_FORWARDED_FOR` as an item in `REMOTE_HOST_HEADERS`unless *all* of the following conditions are satisfied:
+* *Proxy IP Allowed List* requires proxies in the list are properly sanitizing header input and correctly setting an ``X-Forwarded-For`` value equal to the real source IP of the client. {ControllerNameStart} can rely on the IP addresses and hostnames in *Proxy IP Allowed List* to provide non-spoofed values for `X-Forwarded-For`.`
+* Do not configure `HTTP_X_FORWARDED_FOR` as an item in *Remote Host Headers* unless *all* of the following conditions are satisfied:
 ** You are using a proxied environment with ssl termination;
 ** The proxy provides sanitization or validation of the `X-Forwarded-For` header to prevent client spoofing;
 ** `/etc/tower/conf.d/remote_host_headers.py` defines `PROXY_IP_ALLOWED_LIST` that contains only the originating IP addresses of trusted proxies or load balancers.
 ====
++
+. Click btn:[Save] to save the settings.
