--- a/downstream/modules/platform/proc-enable-proxy-support.adoc
+++ b/downstream/modules/platform/proc-enable-proxy-support.adoc
@@ -2,16 +2,15 @@
 [id="proc-enable-proxy-support_{context}"]
 
 = Enable proxy support
-
+//FYI - In 2.5 EA, the System menu is specific to controller so do not change to AAP.
 To provide proxy server support, {ControllerName} handles proxied requests (such as ALB, NLB , HAProxy, Squid, Nginx and tinyproxy in front of {ControllerName}) via the *REMOTE_HOST_HEADERS* list variable in the {ControllerName} settings. By default, *REMOTE_HOST_HEADERS* is set to `["REMOTE_ADDR", "REMOTE_HOST"]`.
 
 To enable proxy server support, edit the *REMOTE_HOST_HEADERS* field in the settings page for your {ControllerName}:
 
 .Procedure
 
-. On your {ControllerName}, navigate to {MenuAEAdminSettings}.
-. Select *Miscellaneous System settings* from the list of *System* options.
-. In the *REMOTE_HOST_HEADERS* field, enter the following values:
+. From the navigation panel, select {MenuSetSystem}.
+. In the *Remote Host Headers* field, enter the following values:
 +
 ----
 [
@@ -21,4 +20,4 @@ To enable proxy server support, edit the *REMOTE_HOST_HEADERS* field in the sett
 ]
 ----
 
-{ControllerNameStart} determines the remote host’s IP address by searching through the list of headers in *REMOTE_HOST_HEADERS* until the first IP address is located.
+{ControllerNameStart} determines the remote host’s IP address by searching through the list of headers in *Remote Host Headers* until the first IP address is located.
