UI updates for managing content in AH ch. 1

--- a/downstream/assemblies/hub/assembly-validated-content.adoc
+++ b/downstream/assemblies/hub/assembly-validated-content.adoc
@@ -14,17 +14,17 @@ Validated collections are uploaded into the `validated` repository.
 You can change to default configuration by using two variables:
 
 * `automationhub_seed_collections` is a boolean that defines whether or not preloading is enabled.
-* `automationhub_collection_seed_repository`. A variable that enables you to specify the type of content to upload when it is set to `true`.
+* `automationhub_collection_seed_repository`is a variable that enables you to specify the type of content to upload when it is set to `true`.
 Possible values are `certified` or `validated`.
-If missing both content sets will be uploaded.
+If this variable is missing, both content sets will be uploaded.
 
 == Installing validated content using the tarball
 
-If you are not using the bundle installer, you can use a standalone tarball, `ansible-validated-content-bundle-1.tar.gz`.
-You can also use this standalone tarball later to update validated contents in any environment, when a newer tarball becomes available, without having to re-run the bundle installer.
+If you are not using the bundle installer, you can use a standalone .tar file, `ansible-validated-content-bundle-1.tar.gz`.
+You can also use this standalone .tar file later to update validated contents in any environment, when a newer .tar file becomes available, without having to re-run the bundle installer.
 
 .Prerequisites
-You require the following variables to run the playbook.
+Use the following required variables to run the playbook.
 
 [cols="50%,50%",options="header"]
 |====
@@ -40,7 +40,7 @@ This variable is set to `true` by the installer.
 |====
 
 .Procedure
-. To obtain the tarball, navigate to the link:{PlatformDownloadUrl}[{PlatformName} download] page and select *Ansible Validated Content*.
+. To obtain the .tar file, navigate to the link:{PlatformDownloadUrl}[{PlatformName} download] page and select *Ansible Validated Content*.
 . Upload the content and define the variables (this example uses `automationhub_api_token`):
 +
 [options="nowrap" subs="+quotes,attributes"]
