--- a/downstream/modules/hub/proc-configure-proxy-remote.adoc
+++ b/downstream/modules/hub/proc-configure-proxy-remote.adoc
@@ -16,7 +16,7 @@ For more information on permissions, see link:{BaseURL}/red_hat_ansible_automati
 
 .Procedure
 //[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to {PrivateHubName}.
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACAdminRemotes}.
 . In either the *rh-certified* or *Community* remote, click the btn:[More Actions] icon *{MoreActionsIcon}* and select *Edit*.
 . Expand the *Show advanced options* drop-down menu.
