--- a/downstream/modules/hub/proc-configure-ansible-galaxy-cli-verify.adoc
+++ b/downstream/modules/hub/proc-configure-ansible-galaxy-cli-verify.adoc
@@ -3,14 +3,14 @@
 = Configuring Ansible-Galaxy CLI to verify collections
 
 You can configure Ansible-Galaxy CLI to verify collections. 
-This ensures that downloaded collections are approved by your organization and have not been changed after they were uploaded to {HubName}.
+This ensures that downloaded collections are approved by your organization and have not been changed after they were uploaded to {PlatformNameShort}.
 
-If a collection has been signed by {HubName}, the server provides ASCII armored, GPG-detached signatures to verify the authenticity of `MANIFEST.json` before using it to verify the collection’s contents. 
+If a collection has been signed by {PlatformNameShort}, the server provides ASCII armored, GPG-detached signatures to verify the authenticity of `MANIFEST.json` before using it to verify the collection’s contents. 
 You must opt into signature verification by link:https://docs.ansible.com/ansible/devel/reference_appendices/config.html#galaxy-gpg-keyring[configuring a keyring] for `ansible-galaxy` or providing the path with the `--keyring` option.
 
 .Prerequisites
 
-* Signed collections are available in {HubName} to verify signature.
+* Signed collections are available in {PlatformNameShort} to verify signature.
 * Certified collections can be signed by approved roles within your organization.
 * Public key for verification has been added to the local system keyring.
 
@@ -24,7 +24,7 @@ gpg --import --no-default-keyring --keyring ~/.ansible/pubring.kbx my-public-key
 +
 [NOTE]
 ====
-In addition to any signatures provided by the {HubName}, signature sources can also be provided in the requirements file and on the command line. 
+In addition to any signatures provided by {PlatformNameShort}, signature sources can also be provided in the requirements file and on the command line. 
 Signature sources should be URIs.
 ====
 +
@@ -51,7 +51,7 @@ collections:
 ansible-galaxy collection verify -r requirements.yml --keyring ~/.ansible/pubring.kbx
 ----
 +
-When you install a collection from {HubName}, the signatures provided by the server are saved along with the installed collections to verify the collection's authenticity.
+When you install a collection from {PlatformNameShort}, the signatures provided by the server are saved along with the installed collections to verify the collection's authenticity.
 . (Optional) If you need to verify the internal consistency of your collection again without querying the {Galaxy} server, run the same command you used previously using the `--offline` option.
 
 [discrete]
@@ -61,8 +61,8 @@ Create a collection with `company_name.product` format.
 This format means that multiple products can have different collections under the company namespace.
 
 [discrete]
-= How do I get a namespace on {HubNameMain}?
+= How do I get a namespace on {PlatformNameShort}?
 
-By default namespaces used on {Galaxy} are also used on {HubNameMain} by the Ansible partner team. 
+By default namespaces used on {Galaxy} are also used on {PlatformNameShort} by the Ansible partner team. 
 For any queries and clarifications contact ansiblepartners@redhat.com.
 
