--- a/downstream/modules/hub/proc-downloading-signature-public-keys.adoc
+++ b/downstream/modules/hub/proc-downloading-signature-public-keys.adoc
@@ -4,12 +4,12 @@
 
 = Downloading signature public keys
 
-After you sign and approve collections, download the signature public keys from the {HubName} UI.
+After you sign and approve collections, download the signature public keys from the {PlatformNameShort} UI.
 You must download the public key before you add it to the local system keyring.
 
 .Procedure
 //[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to your {HubName}.
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACAdminSignatureKeys}.
 The Signature Keys dashboard displays a list of multiple keys: collections and container images.
 
