--- a/downstream/modules/hub/proc-using-content-signing-services-in-pah.adoc
+++ b/downstream/modules/hub/proc-using-content-signing-services-in-pah.adoc
@@ -14,11 +14,11 @@ You can use content signing on {PrivateHubName} in the following scenarios:
 
 .Procedure
 //[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to your {PlatformNameShort}.
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACAdminCollectionApproval}.
 The Approval dashboard opens and displays a list of collections.
 
-. Click btn:[Sign and approve] for each collection that you want to sign.
+. Click btn:[Approve] for each collection that you want to sign.
 
 .Verification
 * Verify that the collections you signed and manually approved are displayed in the *Collections* tab.
