Update inventory file variables for controller and gateway
Updates the following inventory file variables in the VM installer guide:

Add:
- automationgateway_admin_email
- automationgateway_admin_username
- admin_username
- admin_email

Remove:
- automationcontroller_password
- automationcontroller_username

Update:
- automationgateway_admin_password
- admin_password

Affects: VM-install guide - titles/aap-installation-guide

AAP 2.5 Update the inventory file variables in the VM Install guide

https://issues.redhat.com/browse/AAP-27328

--- a/downstream/modules/platform/ref-gateway-variables.adoc
+++ b/downstream/modules/platform/ref-gateway-variables.adoc
@@ -5,9 +5,13 @@
 [cols="50%,50%",options="header"]
 |====
 | *Variable* | *Description*
-| *`automationgateway_admin_password`* | The admin password used by the platform gateway instance.
+| *`automationgateway_admin_username`* | The username used to identify and create the admin superuser in platform gateway.
+
+| *`automationgateway_admin_password`* | The admin password used to connect to the platform gateway instance.
 
 Passwords must be enclosed in quotes when they are provided in plain text in the inventory file.
+
+| *`automationgateway_admin_email`* | The email address used for the admin user for platform gateway.
 
 | *`automationgateway_pg_host`* | The hostname of the Postgres database used by platform gateway, which can be an externally managed database.
 
