--- a/downstream/modules/platform/proc-set-up-virtual-machines.adoc
+++ b/downstream/modules/platform/proc-set-up-virtual-machines.adoc
@@ -63,6 +63,6 @@ sudo dnf install -y ansible-core
 ====
 Ansible core is required on the machine that runs the {AutomationMesh} configuration bundle playbooks.  This document assumes that happens on the execution node. 
 However, this step can be omitted if you run the playbook from a different machine. 
-You cannot currently run directly from the control node, this is not currently supported, but future support would expect the control node has direct connectivity to the execution node.
+You cannot run directly from the control node, this is not currently supported, but future support expects that the control node has direct connectivity to the execution node.
 ====
 
