--- a/lightspeed/modules/proc_configure-vscode-extension.adoc
+++ b/lightspeed/modules/proc_configure-vscode-extension.adoc
@@ -28,6 +28,11 @@ The following illustration displays the configured settings for the Ansible VS C
 .Configured settings for the Ansible VS Code extension
 image::lightspeed-vs-code-settings.png[Configured settings for the Ansible VS Code extension]
 
+[NOTE]
+====
+If your organization recently subscribed to the {PlatformName}, it might take a few hours for {LightspeedShortName} to detect the new subscription. In VS Code, use the *Refresh* button in the Ansible extension from the Activity bar to check again.
+====
+
 [role="_additional-resources"]
 .Additional resources
 
