Installing on Openshift Container Platform - UI updates (#1775)
* Editorial review of entire doc ahead of 2.5 EA (#1628)

* PR suggestions

* test

* Updating procedure steps to better orientate the user

* PR suggestions

--- a/downstream/modules/platform/proc-configuring-controller-image-pull-policy.adoc
+++ b/downstream/modules/platform/proc-configuring-controller-image-pull-policy.adoc
@@ -5,10 +5,12 @@ Use this procedure to configure the image pull policy on your {ControllerName}.
 
 .Procedure
 
+. Log in to {OCP}.
 . Go to menu:Operators[Installed Operators].
-. Locate the *Automation Controller* tab. 
+. Select your {OperatorPlatform} deployment.
+. Select the *Automation Controller* tab. 
 . For new instances, click btn:[Create AutomationController].
-.. For existing instances, you can edit the YAML view by clicking {MoreActionsIcon} and then btn:[Edit AutomationController].
+.. For existing instances, you can edit the YAML view by clicking the  {MoreActionsIcon} icon and then btn:[Edit AutomationController].
 . Click btn:[advanced Configuration].
 Under *Image Pull Policy*, click on the radio button to select
 * *Always*
