--- a/downstream/modules/platform/proc-hub-route-options.adoc
+++ b/downstream/modules/platform/proc-hub-route-options.adoc
@@ -6,10 +6,12 @@ The {PlatformName} operator installation form allows you to further configure yo
 
 .Procedure
 
-. Go to menu:Operators[Installed Operators].
-. Locate the *Automation Hub* tab. 
+. Log in to {OCP}.
+. Navigate to menu:Operators[Installed Operators].
+. Select your {OperatorPlatform} deployment.
+. Select the *Automation Hub* tab. 
 . For new instances, click btn:[Create AutomationHub].
-.. For existing instances, you can edit the YAML view by clicking {MoreActionsIcon} and then btn:[Edit AutomationHub].
+.. For existing instances, you can edit the YAML view by clicking the {MoreActionsIcon} icon and then btn:[Edit AutomationHub].
 . Click btn:[Advanced configuration].
 . Under *Ingress type*, click the drop-down menu and select *Route*.
 . Under *Route DNS host*, enter a common host name that the route answers to.
