--- a/downstream/archive/archived-modules/platform/con-inventory-introduction.adoc
+++ b/downstream/archive/archived-modules/platform/con-inventory-introduction.adoc
@@ -61,7 +61,7 @@ registry_password='<registry password>'
 
 The first part of the inventory file specifies the hosts or groups that Ansible can work with. 
 
-[WARNING]
+[NOTE]
 ====
 You must have valid subscriptions attached before installing the Ansible Automation Platform. If you have a new Red Hat Account, you do not have to perform any additional tasks. By default, Simple Content Access, which hosts access to all your subscriptions and content, is enabled. You can enable Simple Content Access by visiting Red Hat Console. 
 
